@@ -35,6 +35,8 @@
 25. Save interface settings even if dialog closed bty system back button or
     'Esc' key.
 26. Fix Composers, Conductors, and Bands not showing in MAI track info.
+27. Fix album cover not showing when click on "Browse", "Go to album", or
+    "+N more" links in now-playing/MAI.
 
 4.1.5
 -----
